@@ -515,14 +515,7 @@ enum_flat_map(VALUE obj)
 static VALUE
 enum_to_a(int argc, VALUE *argv, VALUE obj)
 {
-    VALUE ary, size = rb_check_funcall(obj, id_size, 0, 0);
-
-    if (FIXNUM_P(size)) {
-	ary = rb_ary_new_capa(NUM2LONG(size));
-    }
-    else {
-	ary = rb_ary_new();
-    }
+    VALUE ary = rb_ary_new();
 
     rb_block_call(obj, id_each, argc, argv, collect_all, ary);
     OBJ_INFECT(ary, obj);
